[package]
name = "enum_extract"
version = "0.1.1"
authors = ["Michael Layzell <michael@thelayzells.com>"]
description = "Helper macros for extracting single enum variants of an enum"
documentation = "https://docs.rs/enum_extract"
repository = "https://github.com/mystor/enum_extract"
readme = "README.md"
keywords = ["enum", "variant", "try-let"]
license = "MIT"
